# AMS-backend

./: README.md  main.py  pyproject.toml
core/artists/: services.py  urls.py  views.py
core/core/: admin.py  authentication.py  manager.py  models.py  permission.py  serializers.py  settings.py  urls.py  utils.py  views.py
core/core/migrations/: 0001_initial.py
core/users/: services.py  urls.py  views.py
